# isro-rover-challenge

./: .gitignore  README.md
isro/: README.md
isro/install/: local_setup.sh  setup.sh
isro/log/: latest_build
isro/src/costmap/: CMakeLists.txt  package.xml
isro/src/costmap/src/: global_costmap.py
isro/src/global_planner/: package.xml  setup.py
isro/src/global_planner/global_planner/: planner.py
isro/src/interfaces/: CMakeLists.txt  package.xml
isro/src/local_planner/: setup.py
isro/src/map_server/: CMakeLists.txt  package.xml
isro/src/map_server/src/: map_maker.py  map_node.py
isro/src/map_server_node/: package.xml  setup.cfg  setup.py
isro/src/map_server_node/map_server_node/: map_maker.py
isro/src/planner/: CMakeLists.txt  package.xml
isro/src/planner/src/: AStarPlanner.py  DWALocalPlanner.py  TEBLocalPlanner.py  global_planner.py  local_planner.py
isro/src/robot_setup/: CMakeLists.txt  package.xml
isro/src/robot_setup/src/: localization_publisher.py  odom_publisher.py  point_cloud_publisher.py  (+1 more)
local_planner/: CMakeLists.txt  package.xml
local_planner/src/: dwa_planner.cpp  dwa_planner_node.cpp
rover/: commands.txt  frames.gv
rover/launch/: bringup_launch.py  custom_launch.py  full_launch.py  isro_launch.py  localization_launch.py  navigation_launch.py  plan.launch  robot.launch  start.launch  start.py
rover/maps/: isro_gmap.yaml  isro_map.yaml  isro_map2.yaml
rover/params/: costmap_common_params.yaml  local_costmap_params.yaml  local_planner.yaml  nav2_params.yaml  params.yaml  rviz_config.rviz  rviz_config2.rviz
(+60 files in other folders)
