##############################################################################
# CMake
##############################################################################

cmake_minimum_required(VERSION 2.8.3)
project(interfaces)

##############################################################################
# Dependencies
##############################################################################

find_package(catkin REQUIRED COMPONENTS 
  message_generation 
  geometry_msgs
)


##############################################################################
# Messages
##############################################################################


##############################################################################
# Services
##############################################################################

add_service_files(
  DIRECTORY
    srv
  FILES
    AddObjectSrv.srv
)


generate_messages(DEPENDENCIES geometry_msgs)

##############################################################################
# Dynamic Reconfigure
##############################################################################

##############################################################################
# Catkin
##############################################################################

catkin_package(CATKIN_DEPENDS
             message_runtime
)